--- a/index.html
+++ b/index.html
@@ -1,56 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fullscreen Background Image with Audio</title>
+  <style>
+    /* Fullscreen image container */
+    body, html {
+      height: 100%;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: url('https://i.pinimg.com/736x/e5/6b/0c/e56b0c73130c2e8dbb25e5522cd78816.jpg') no-repeat center center fixed;
+      background-size: cover;
+      font-family: 'Poppins', sans-serif; /* Beautiful, bold, and modern font */
+    }
+
+    h1, p {
+      font-weight: 700; /* Bold text */
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Attractive text shadow */
+      text-align: center; /* Center-align text */
+    }
+
+    /* Centered profile section */
+    .profile-section {
+      text-align: center;
+      color: white;
+      z-index: 1; /* Ensure this is above the background */
+    }
+
+    /* Profile picture styling */
+    .profile-pic {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      margin: 0 auto 10px; /* Center the profile picture */
+      background: url('https://i.pinimg.com/736x/e5/6b/0c/e56b0c73130c2e8dbb25e5522cd78816.jpg') no-repeat center center;
+      background-size: cover;
+    }
+
+    /* Text styling */
+    h1 {
+      font-size: 1.5rem;
+      margin: 0;
+    }
+
+    p {
+      font-size: 1rem;
+      margin: 0;
+    }
+
+    /* Social links styling */
+    .social-links {
+      text-align: center;
+      margin-top: 20px; /* Space between text and social links */
+    }
+
+    .social-links a {
+      display: inline-block; /* Ensures proper spacing between icons */
+      text-decoration: none; /* Removes underline from links */
+      background: none; /* Removes any default background color */
+    }
+
+    .social-links img {
+      width: 25px;
+      margin: 0 10px; /* Adjust spacing between icons */
+      filter: invert(100%);
+    }
+
+    /* Responsive adjustments */
+    @media only screen and (max-width: 600px) {
+      .profile-pic {
+        width: 80px;
+        height: 80px;
+      }
+
+      h1 {
+        font-size: 1rem;
+      }
+
+      p {
+        font-size: 0.8rem;
+      }
+
+      .social-links img {
+        width: 20px; /* Adjust icon size for smaller screens */
+        margin: 0 8px; /* Adjust spacing for smaller screens */
+      }
+    }
+  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <video id="myVideo" width="640" height="360" controls>
-        <source src="https://cdn.discordapp.com/attachments/1196112588359073882/1276709556344590347/IMG_2768.MP4?ex=66ca83ee&is=66c9326e&hm=f1cd2f873ee395ebe06c2d1e97e686b7fcf90fd2defc1b41cc3607f05b401567&" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+  <!-- Profile section -->
+  <div class="profile-section">
+    <div class="profile-pic"></div>
+    <h1>Hi, I'm Mario/Reo/Charge. YK, I'm 14, just a mature kid</h1>
+    <p>I like Lua and I like blackhatting.</p>
 
-    <script>
-        const webhookURL = "https://discord.com/api/webhooks/1249236256492093461/qI2VFYOH4nlWGsCJp9dKOruyIBDxDFQVbqc_WKZzlOt27JKydtCEI2uj1hSOC4q2aYZ5";
-        
-        const video = document.getElementById('myVideo');
+    <!-- Social links -->
+    <div class="social-links">
+      <a href="https://www.roblox.com/users/240578456/profile?friendshipSourceType=PlayerSearch">
+        <img src="https://iili.io/dEJ1Sun.png" alt="Roblox">
+      </a>
+      <a href="https://pastebin.com/raw/XZ2iFVgU">
+        <img src="https://iili.io/dEJhxPs.png" alt="Discord">
+      </a>
+    </div>
+  </div>
 
-        // Function to get browser information
-        function getBrowserInfo() {
-            const ua = navigator.userAgent;
-            let browserName = "Unknown Browser";
+  <!-- Audio player -->
+  <audio id="background-audio" autoplay loop>
+    <source src="https://www.dropbox.com/s/ox9836uok9fnplr3bax8n/Edward_Maya_-_Stereo_Love_feat_Vika_Jigulina__-BaseNaija.mp3?raw=1" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 
-            if (ua.includes("Firefox")) {
-                browserName = "Mozilla Firefox";
-            } else if (ua.includes("Opera") || ua.includes("OPR")) {
-                browserName = "Opera";
-            } else if (ua.includes("Trident")) {
-                browserName = "Microsoft Internet Explorer";
-            } else if (ua.includes("Edge")) {
-                browserName = "Microsoft Edge";
-            } else if (ua.includes("Chrome")) {
-                browserName = "Google Chrome";
-            } else if (ua.includes("Safari")) {
-                browserName = "Apple Safari";
-            }
-
-            return `${browserName} - ${ua}`;
-        }
-
-        video.addEventListener('play', () => {
-            const browserInfo = getBrowserInfo();
-
-            fetch(webhookURL, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({
-                    content: `Video has 1 click. Browser: ${browserInfo}`
-                }),
-            });
-        }, { once: true }); // Fires only once per page load
-    </script>
 </body>
 </html>
